Fix vertical alignment of views rows in the Related block.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -2913,6 +2913,7 @@ label[for="edit-pubdate"] {
     margin-right: 0.5em;
     display: inline-block;
     margin-bottom: 1em;
+    vertical-align: top;
 
     &:last-child {
       margin-bottom: 0;
